# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

dist_pkgdata_DATA = random-100mib.bin \
                    random-1mib.bin \
                    zero-100mib.bin \
                    zero-1mib.bin
