# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

nobase_include_HEADERS = systx/compiler.h \
                         systx/fcntl-tm.h \
                         systx/fcntl.h \
                         systx/stddef.h \
                         systx/stdlib-tm.h \
                         systx/stdlib.h \
                         systx/string-tm.h \
                         systx/string.h \
                         systx/sys/socket.h \
                         systx/sys/socket-tm.h \
                         systx/sys/types.h \
                         systx/systx.h \
                         systx/systx-libc.h \
                         systx/systx-module.h \
                         systx/systx-tm.h \
                         systx/unistd-tm.h \
                         systx/unistd.h \
                         tanger-stm-internal.h \
                         tanger-stm-internal-errcode.h \
                         tanger-stm-internal-extact.h
