#
# MIT License
# Copyright (c) 2017    Thomas Zimmermann <tdz@users.sourceforge.net>
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.
#
# SPDX-License-Identifier: MIT

nobase_include_HEADERS = picotm/compiler.h \
                         picotm/config/picotm-config.h \
                         picotm/picotm-error-base.h \
                         picotm/picotm-error.h \
                         picotm/picotm-lib-array.h \
                         picotm/picotm-lib-ptr.h \
                         picotm/picotm-lib-ref.h \
                         picotm/picotm-lib-rwlock.h \
                         picotm/picotm-lib-rwstate.h \
                         picotm/picotm-lib-shared-treemap.h \
                         picotm/picotm-lib-shared-ref-obj.h \
                         picotm/picotm-lib-slist.h \
                         picotm/picotm-lib-spinlock.h \
                         picotm/picotm-lib-tab.h \
                         picotm/picotm-lib-treemap.h \
                         picotm/picotm-module.h \
                         picotm/picotm.h
