#
# picotm - A system-level transaction manager
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: LGPL-3.0-or-later
#

nobase_include_HEADERS = picotm/compiler.h \
                         picotm/config/picotm-config.h \
                         picotm/picotm-error-base.h \
                         picotm/picotm-error.h \
                         picotm/picotm-lib-array.h \
                         picotm/picotm-lib-global-state.h \
                         picotm/picotm-lib-ptr.h \
                         picotm/picotm-lib-ref.h \
                         picotm/picotm-lib-rwlock.h \
                         picotm/picotm-lib-rwstate.h \
                         picotm/picotm-lib-shared-ref-obj.h \
                         picotm/picotm-lib-shared-state.h \
                         picotm/picotm-lib-shared-treemap.h \
                         picotm/picotm-lib-slist.h \
                         picotm/picotm-lib-spinlock.h \
                         picotm/picotm-lib-state.h \
                         picotm/picotm-lib-tab.h \
                         picotm/picotm-lib-thread-state.h \
                         picotm/picotm-lib-treemap.h \
                         picotm/picotm-module.h \
                         picotm/picotm.h
